Fixed logo spacing

--- a/html/css/skeleton.css
+++ b/html/css/skeleton.css
@@ -373,6 +373,11 @@ ol,
 form {
   margin-bottom: 2.5rem; }
 
+.mb-m {
+  margin-bottom: 50px; }
+.mt-m {
+  margin-top: 50px; }
+
 
 /* Utilities
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
